--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,12 +1,12 @@
 <header class="header">
-  <div class="header-top">
-    <p class="create-group">グループを作成しました</p>
+  <div class="header--top">
+    <p class="header--top__create-group">グループを作成しました</p>
   </div>
-  <div class="header-in">
-    <div class="header-left">
+  <div class="header--in">
+    <div class="header--in__left">
       <div class="in-lefthead">
         <div class="name-tag">
-          <p class="user-name">user_name</p>
+          <p class="name-tag__user-name">user_name</p>
           <a href="#">
             <i class="fa fa-cog"></i>
           </a>
@@ -16,39 +16,39 @@
         </div>
       </div>
     </div>
-    <div class="header-right">
-      <div class="in-righthead">
-        <p class="group-name">group_name</p>
-        <p class="group-member">group_member</p>
-        <a href="edit">
-          <div class="edit-name">Edit</div>
+    <div class="header--in__right">
+      <div class="in-righthead group">
+        <p class="group--name">group_name</p>
+        <p class="group--member">group_member</p>
+        <a class="group--edit" href="edit">
+          <div class="group--edit__name">Edit</div>
         </a>
       </div>
     </div>
   </div>
 </header>
-<div class="contents">
-  <div class="left-content">
+<div class="content">
+  <div class="content--left">
     <div class="in-leftcontent">
       <div class="group">
-        <p class="group-name">group-name</p>
-        <p class="group-comment">group-comment</p>
+        <p class="group__name">group-name</p>
+        <p class="group__comment">group-comment</p>
       </div>
     </div>
   </div>
-  <div class="contents-main">
+  <div class="content--main">
     <div class="in-rightcontent">
-      <div class="submit-table">
-        <ul class="submit-record">
-          <li class="submit-name">submit-user</li>
-          <li class="submit-date">submit-date</li>
+      <div class="submit">
+        <ul class="submit--record">
+          <li class="submit--record__name">submit-user</li>
+          <li class="submit--record__date">submit-date</li>
         </ul>
-        <p class="submit-text">submit-text</p>
+        <p class="submit--text">submit-text</p>
       </div>
     </div>
     <footer class="footer">
       <form class="submit-form">
-        <div class="message-form">
+        <div class="submit-form--message-form">
           <input class="text-box" type-"text" name="messaage" placeholder="MESSAGE">
           <a href="#">
             <i class="fa fa-image"></i>
