--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -37,17 +37,20 @@ html, body {
             font-weight: bold;
             color: $left-textcolor;
           }
-          .fa-edit{
-            float: right;
-            margin: 42px 8px;
-            color: $left-textcolor;
-            font-size: 16px;
-          }
-          .fa-cog{
-            float: right;
-            padding: 42px 0;
-            color: $left-textcolor;
-            font-size: 16px;
+          .list{
+              list-style: none;
+            .icon-edit{
+              float: right;
+              margin: 42px 8px;
+              color: $left-textcolor;
+              font-size: 16px;
+            }
+            .icon-cog{
+              float: right;
+              padding: 42px 0;
+              color: $left-textcolor;
+              font-size: 16px;
+            }
           }
         }
       }
