--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,11 +6,14 @@
       .header--in__left
         .in-lefthead
           .name-tag
-            %p.name-tag__user-name user_name
-            %a{:href => "#"}
-              %i.fa.fa-cog
-            %a{:href => "#"}
-              %i.fa.fa-edit
+            %p.name-tag__user-name
+              = current_user.name
+            %li.list
+              = link_to edit_user_path(current_user) do
+                = fa_icon 'cog', class: 'icon-cog'
+            %li.list
+              = link_to do
+                = fa_icon 'pencil-square-o', class: 'icon-edit'
       .header--in__right
         .in-righthead.group
           %p.group--name group_name
