フラッシュメッセージ設定

--- a/app/assets/stylesheets/_samplecode.scss
+++ b/app/assets/stylesheets/_samplecode.scss
@@ -2,3 +2,5 @@ $body-white: #fafafa;
 $con-width: calc(100vw - 300px);
 $left-textcolor: #FFFFFF;
 $member-color: #999999;
+$light_blue: #38AEF0;
+$alert_orange: #F35500;
