--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "./reset";
 @import "./variable";
 @import "font-awesome";
-@import "./user"
+@import "./user";
+@import "./group";
 @import "./flash"
