--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,14 +12,14 @@
               = link_to edit_user_path(current_user) do
                 = fa_icon 'cog', class: 'icon-cog'
             %li.list
-              = link_to do
+              = link_to new_group_path do
                 = fa_icon 'pencil-square-o', class: 'icon-edit'
       .header--in__right
         .in-righthead.group
           %p.group--name group_name
           %p.group--member group_member
-          %a.group--edit{:href => "edit"}
-            .group--edit__name Edit
+          %li.group--edit
+            = link_to 'Edit', '/groups/(current_group)/edit', class: 'group--edit__name'
   .content
     .content--left
       .in-leftcontent
