--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,6 @@
 @import "font-awesome";
 @import "./user";
 @import "./group";
-@import "./flash"
+@import "./flash";
+@import "./side";
+@import "./chat";
