--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,7 +10,7 @@
             = @group.name
           %p.group--member group_member
           %li.group--edit
-            = link_to 'Edit', 'edit_group_path(@group)', class: 'group--edit__name'
+            = link_to 'Edit', edit_group_path(@group), class: 'group--edit__name'
     .content
       .content--main
         .in-rightcontent
