--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -21,7 +21,7 @@
           .submit-form
             .submit-form--message-form
               .form
-                = form_for [@group, @message] do |f|
+                = form_for [@group, @message] ,html: { class: 'new_message'} do |f|
                   = f.text_field :content, class: 'form__message', placeholder: 'type a message'
                   .form__mask
                     = f.label :image, class: 'form__mask__image' do
