--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,7 +8,10 @@
         .in-righthead.group
           %p.group--name
             = @group.name
-          %p.group--member group_member
+          %p.group--member
+            - @group.users.each do |user|
+              %span
+                =user.name
           %li.group--edit
             = link_to 'Edit', edit_group_path(@group), class: 'group--edit__name'
     .content
